# aws_data_platform

./: .gitignore  Pipfile  README.md  airflow-requirements.txt  pyproject.toml  requirements.txt  setup.py
aws_data_platform/products/dau/: dau.py
aws_data_platform/products/examples/: simple_dag.py
aws_data_platform/products/tiingo/: tiingo.py
aws_data_platform/workspace/: config.py
aws_data_platform/workspace/env/: airflow_env.yml  databox_env.yml
data/products/crypto/: crypto.py  daily_prices.py  metadata.py  top_of_book.py
data/products/dau/: dau.py
data/products/dau_aws/: dau_aws.py
data/products/emr/: emr.py
data/products/examples/: distributed_dag.py
data/products/sample_dag/: sample_dag_2.py
data/products/tiingo/: load_etf_prices.py  load_etfs.py  load_prices.py  load_stock_prices.py  load_tickers.py  nasdaq_100.py  sp_500.py  tiingo.py
data/workspace/: config.py
data/workspace/env/: airflow_env.yml  databox_env.yml
data/workspace/ssecrets/: databox_secrets.yml  prd_postgres_secrets.yml
scripts/: format.sh  install.sh
workspace/: .gitignore  airflow.Dockerfile  config.py  databox.Dockerfile  dev_config.py  prd_config.py
workspace/env/: databox_env.yml
