[project]
name = "aws_data_platform"
version = "0.1.0"
requires-python = ">3.7"

dependencies = [
    "boto3",
    # apache-airflow-providers-amazon 3.0.0 requires pandas<1.4,>=0.17.1
    "pandas<1.4",
    "phidata>=0.1.32",
    "psycopg2-binary",
    # apache-airflow 2.2.5 requires sqlalchemy<1.4.0,>=1.3.18
    "sqlalchemy<1.4.0",
    "tiingo",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["workspace"]

# Update this value if the workspace directory is renamed.
# [tool.phidata]
# workspace = "workspace"

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "airflow",
    "airflow.*",
    "phidata",
    "phidata.*",
    "setuptools",
    "setuptools.*",
]
ignore_missing_imports = true
